// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`render the UI as expected 1`] = `
<div
  className="Card"
>
  <button
    type="button"
  >
    delete
  </button>
  <h3>
    title
  </h3>
  <p>
    content
  </p>
</div>
`;

exports[`renders without crashing 1`] = `
<div
  className="Card"
>
  <button
    type="button"
  >
    delete
  </button>
  <h3>
    techno
  </h3>
  <p>
    boots n cats
  </p>
</div>
`;
